# CppQuickCheck

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  COPYING  Dockerfile.singleheader  LICENSE  README.md
examples/: CMakeLists.txt
examples/src/: BoostTupleSupport.cpp  TestChooseGenerator.cpp  TestReverse.cpp  TestReverseArray.cpp  TestSlowShrinking.cpp  TestSort.cpp  TestSortCompact.cpp  TestWithCustomGenerator.cpp  exampleElementsGen.cpp  sampleOutput.cpp  sampleShrinkOutput.cpp
include/: cppqc.h
include/cppqc/: Arbitrary.h  CompactCheck.h  Generator.h  PrettyPrint.h  Property.h  Test.h  cxx-prettyprint.h
src/: Arbitrary.cpp
test/: arbitrary-tests.cpp  catch-main.cpp  catch.hpp  compact-check-tests.cpp  functional-tests.cpp  shrink-explosion-protection.cpp
